laborations/lab2/testsuite/bad/bad102.cc
int bar(int x) {
	int x;
        return x;
}
